--- a/slums.html
+++ b/slums.html
@@ -1,169 +1,289 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>SLUMS Assessment – LSU Physical Therapy</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="SLUMS Exam Form for LSU Physical Therapy" />
-  <meta name="author" content="LSU PT" />
-  <!-- css -->
-  <link href="css/bootstrap.min.css" rel="stylesheet" />
-  <link href="css/fancybox/jquery.fancybox.css" rel="stylesheet">
-  <link href="css/jcarousel.css" rel="stylesheet" />
-  <link href="css/flexslider.css" rel="stylesheet" />
-  <link href="css/style.css" rel="stylesheet" />
+  <meta charset="utf-8" />
+  <title>SLUMS — LSU PT Forms</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- Local Bootstrap + your light LSU theme -->
+  <link rel="stylesheet" href="css/bootstrap.min.css" />
+  <link rel="stylesheet" href="css/forms.css" />
+
+  <style>
+    /* Page-specific touches (kept tiny) */
+    .container-narrow { max-width: 900px; }
+    .required::after { content:" *"; color:#c00; }
+    .score-pill { font-weight:700; }
+  </style>
 </head>
-
 <body>
-<div id="wrapper">
 
-  <!-- start header -->
-  <header>
-    <div class="navbar navbar-default navbar-static-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo"/></a>
+<!-- NAV (consistent with index) -->
+<nav class="navbar navbar-expand-lg navbar-dark lsu-navbar shadow-sm">
+  <div class="container">
+    <a class="navbar-brand font-weight-600" href="index.html">LSU PT — Forms</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div id="nav" class="collapse navbar-collapse">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item"><a class="nav-link active" href="slums.html">SLUMS</a></li>
+        <li class="nav-item"><a class="nav-link" href="moca.html">MoCA</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<!-- HEADER -->
+<header class="hero">
+  <div class="container container-narrow py-5">
+    <h1 class="h3 mb-2">SLUMS — Score Entry</h1>
+    <p class="text-muted mb-0">
+      Record SLUMS total score and notes for documentation. This page does not include test items.
+    </p>
+  </div>
+</header>
+
+<main class="container container-narrow my-4">
+  <!-- Live score + interpretation -->
+  <div class="alert lsu-card mb-4">
+    <div class="d-flex flex-column flex-md-row align-items-md-center justify-content-between">
+      <div class="mb-3 mb-md-0">
+        <div class="small text-muted">Live score</div>
+        <div class="h4 mb-0">
+          Total: <span id="liveTotal" class="score-pill">0</span> / 30
+          <span id="liveInterp" class="ml-3 badge badge-secondary">—</span>
         </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="index.html">Home</a></li> 
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="courses.html">Courses</a></li>
-            <li><a href="pricing.html">Pricing</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li class="active"><a href="slums.html">SLUMS</a></li>
-          </ul>
+        <div class="small text-muted mt-2">
+          Education rule (SLU): HS+ Normal = 27–30 · MND = 21–26 · Dementia ≤20
+          &nbsp;|&nbsp; HS/less Normal = 25–30 · MND = 20–24 · Dementia ≤19
         </div>
       </div>
-    </div>
-  </header>
-  <!-- end header -->
-
-  <section id="inner-headline">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <h2 class="pageTitle">SLUMS Cognitive Assessment</h2>
-        </div>
+      <div>
+        <button type="button" class="btn btn-outline-primary mr-2" onclick="window.print()">Print</button>
+        <button type="button" class="btn btn-outline-secondary" id="clearBtn">Clear</button>
       </div>
     </div>
-  </section>
+  </div>
 
-  <section id="content">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-10 col-md-offset-1">
-          <p>Please fill out the following SLUMS (Saint Louis University Mental Status) exam form. This information will help assess basic cognitive function.</p>
-          <br/>
+  <!-- FORM -->
+  <!-- Replace action with your Formspree endpoint -->
+  <form method="POST" action="https://formspree.io/f/YOUR-FORM-ID" accept-charset="UTF-8" class="lsu-card p-3 p-md-4">
+    <!-- Optional post-submit redirect -->
+    <input type="hidden" name="_redirect" value="thanks.html" />
 
-          <form method="POST" action="https://formspree.io/f/your-form-id" class="contact" id="slums-form">
-            <h3>Cognitive Screening – SLUMS Exam</h3>
+    <fieldset class="border p-3 mb-4">
+      <legend class="w-auto px-2">Patient Info</legend>
 
-            <div class="form-group">
-              <label>Date:</label>
-              <input type="date" class="form-control" name="date">
-            </div>
-
-            <div class="form-group">
-              <label>Patient Name:</label>
-              <input type="text" class="form-control" name="patient_name" required>
-            </div>
-
-            <div class="form-group">
-              <label>Age:</label>
-              <input type="number" class="form-control" name="age" min="0">
-            </div>
-
-            <div class="form-group">
-              <label>Education Level:</label>
-              <select class="form-control" name="education_level">
-                <option>Less than high school</option>
-                <option>High school</option>
-                <option>College or higher</option>
-              </select>
-            </div>
-
-            <hr>
-            <h4>1. What day of the week is it? (1 pt)</h4>
-            <input type="text" class="form-control" name="q1_day">
-
-            <h4>2. What is the year? (1 pt)</h4>
-            <input type="text" class="form-control" name="q2_year">
-
-            <h4>3. What state are we in? (1 pt)</h4>
-            <input type="text" class="form-control" name="q3_state">
-
-            <h4>4. Please remember these five objects: Apple, Pen, Tie, House, Car (5 pts)</h4>
-            <p>(You will be asked to recall these later.)</p>
-
-            <h4>5. Math Series: 100 - 7 repeatedly (5 pts)</h4>
-            <textarea class="form-control" name="q5_math_100s" rows="2" placeholder="93, 86, 79..."></textarea>
-
-            <h4>6. What’s the opposite of 'ready'? (1 pt)</h4>
-            <input type="text" class="form-control" name="q6_opposite_ready">
-
-            <h4>7. Recall the five words from earlier (5 pts)</h4>
-            <textarea class="form-control" name="q7_recall_5words" rows="2" placeholder="Apple, Pen..."></textarea>
-
-            <h4>8. Draw a clock: Set the time to 10 minutes to 11 (2 pts)</h4>
-            <p>📝 Please draw on paper and bring with you, or upload a photo if allowed.</p>
-
-            <h4>9. Identify the shapes and repeat the sentence (2 pts)</h4>
-            <input type="text" class="form-control" name="q9_shapes_and_sentence" placeholder="e.g. Triangle, Square; Sentence...">
-
-            <h4>10. Story Questions – Answer after hearing story (8 pts)</h4>
-            <textarea class="form-control" name="q10_story_answers" rows="4" placeholder="Answer story comprehension questions..."></textarea>
-
-            <h4>11. How many quarters in $1.75? (1 pt)</h4>
-            <input type="text" class="form-control" name="q11_quarters">
-
-            <h4>12. Who is the current president? (1 pt)</h4>
-            <input type="text" class="form-control" name="q12_president">
-
-            <h4>13. What is the next number in this series: 2, 4, 6...? (2 pts)</h4>
-            <input type="text" class="form-control" name="q13_number_series">
-
-            <h4>14. Say this sentence: "The cat always hid under the couch when dogs were in the room." (1 pt)</h4>
-            <input type="text" class="form-control" name="q14_sentence_recall">
-
-            <hr>
-            <div class="form-group">
-              <label>Clinician Notes:</label>
-              <textarea class="form-control" name="clinician_notes" rows="3"></textarea>
-            </div>
-
-            <div class="form-group">
-              <label>Clinician Name:</label>
-              <input type="text" class="form-control" name="clinician_name">
-            </div>
-
-            <button type="submit" class="btn btn-primary">Submit SLUMS Assessment</button>
-          </form>
-
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label class="required">Patient Name</label>
+          <input class="form-control" name="patient_name" required />
+        </div>
+        <div class="form-group col-md-3">
+          <label>Date</label>
+          <input type="date" class="form-control" name="date" />
+        </div>
+        <div class="form-group col-md-3">
+          <label>DOB</label>
+          <input type="date" class="form-control" name="dob" />
         </div>
       </div>
-    </div>
-  </section>
 
-  <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <p>&copy; LSU Physical Therapy – SLUMS Assessment Form</p>
+      <div class="form-row">
+        <div class="form-group col-md-3">
+          <label>MRN (optional)</label>
+          <input class="form-control" name="mrn" />
+        </div>
+        <div class="form-group col-md-4">
+          <label class="required">Education Level</label>
+          <select class="form-control" name="education_level" id="education" required>
+            <option value="" selected disabled>Select</option>
+            <option value="hs_or_less">High school or less</option>
+            <option value="more_than_hs">More than high school</option>
+          </select>
+        </div>
+        <div class="form-group col-md-5">
+          <label>Clinician</label>
+          <input class="form-control" name="clinician" />
         </div>
       </div>
-    </div>
-  </footer>
+    </fieldset>
 
-</div>
-<!-- JavaScript -->
-<script src="js/jquery.js"></script>
+    <!-- Scoring -->
+    <fieldset class="border p-3 mb-4">
+      <legend class="w-auto px-2">Scoring</legend>
+
+      <div class="form-row">
+        <div class="form-group col-md-4">
+          <label class="required">Total Score (0–30)</label>
+          <input type="number" min="0" max="30" class="form-control" name="slums_total" id="totalScore" required />
+        </div>
+        <div class="form-group col-md-8">
+          <label>Interpretation (auto)</label>
+          <input class="form-control" name="interpretation" id="interpField" readonly />
+        </div>
+      </div>
+
+      <details class="mb-2">
+        <summary class="mb-2">Itemized entries (optional)</summary>
+        <p class="text-muted small mb-3">
+          Use these fields if you want to enter item-level numbers and let the page sum them.
+          (No enforced per-item maxima here.)
+        </p>
+        <div class="form-row">
+          <div class="form-group col-6 col-md-3">
+            <label>Item 1</label>
+            <input type="number" class="form-control seg" name="item_1" />
+          </div>
+          <div class="form-group col-6 col-md-3">
+            <label>Item 2</label>
+            <input type="number" class="form-control seg" name="item_2" />
+          </div>
+          <div class="form-group col-6 col-md-3">
+            <label>Item 3</label>
+            <input type="number" class="form-control seg" name="item_3" />
+          </div>
+          <div class="form-group col-6 col-md-3">
+            <label>Item 4</label>
+            <input type="number" class="form-control seg" name="item_4" />
+          </div>
+
+          <div class="form-group col-6 col-md-3">
+            <label>Item 5</label>
+            <input type="number" class="form-control seg" name="item_5" />
+          </div>
+          <div class="form-group col-6 col-md-3">
+            <label>Item 6</label>
+            <input type="number" class="form-control seg" name="item_6" />
+          </div>
+          <div class="form-group col-6 col-md-3">
+            <label>Item 7</label>
+            <input type="number" class="form-control seg" name="item_7" />
+          </div>
+          <div class="form-group col-6 col-md-3">
+            <label>Item 8</label>
+            <input type="number" class="form-control seg" name="item_8" />
+          </div>
+
+          <div class="form-group col-6 col-md-3">
+            <label>Item 9</label>
+            <input type="number" class="form-control seg" name="item_9" />
+          </div>
+          <div class="form-group col-6 col-md-3">
+            <label>Item 10</label>
+            <input type="number" class="form-control seg" name="item_10" />
+          </div>
+          <div class="form-group col-6 col-md-3">
+            <label>Item 11</label>
+            <input type="number" class="form-control seg" name="item_11" />
+          </div>
+          <div class="form-group col-6 col-md-3">
+            <label>Item 12</label>
+            <input type="number" class="form-control seg" name="item_12" />
+          </div>
+        </div>
+
+        <button type="button" class="btn btn-outline-primary" id="sumBtn">Sum items → Total</button>
+      </details>
+    </fieldset>
+
+    <!-- Notes & Consent -->
+    <div class="form-group">
+      <label>Clinician Notes</label>
+      <textarea class="form-control" name="clinician_notes" rows="4" placeholder="Observations, accommodations, patient effort, follow-up plan…"></textarea>
+    </div>
+
+    <div class="form-group form-check my-3">
+      <input type="checkbox" class="form-check-input" id="consent" required />
+      <label class="form-check-label required" for="consent">
+        I confirm this information is recorded for clinical screening purposes.
+      </label>
+    </div>
+
+    <button class="btn btn-primary btn-lg">Submit SLUMS Entry</button>
+
+    <p class="text-muted small mt-4 mb-0">
+      Note: SLUMS (Saint Louis University Mental Status) is used as a screening tool. Interpretation here follows
+      the published education-adjusted thresholds and is for screening documentation only.
+    </p>
+  </form>
+</main>
+
+<!-- FOOTER (consistent) -->
+<footer class="site-footer py-4">
+  <div class="container container-narrow small d-flex flex-column flex-sm-row justify-content-between align-items-start">
+    <span>© LSU Health — Department of Physical Therapy</span>
+    <span>Contact: <a href="mailto:ahpt@lsuhsc.edu">ahpt@lsuhsc.edu</a> • (504) 568-4288</span>
+  </div>
+</footer>
+
+<!-- JS (no dependency on jQuery for the logic below) -->
+<script>
+  const eduEl = document.getElementById('education');
+  const totalEl = document.getElementById('totalScore');
+  const interpEl = document.getElementById('interpField');
+  const liveTotal = document.getElementById('liveTotal');
+  const liveInterp = document.getElementById('liveInterp');
+
+  function clampToNumber(val) {
+    const n = Number(val);
+    return Number.isFinite(n) ? n : 0;
+  }
+
+  function interpretSLUMS(total, edu) {
+    // Education-adjusted cutoffs:
+    // HS+ : Normal 27–30, Mild 21–26, Dementia ≤20
+    // HS/less : Normal 25–30, Mild 20–24, Dementia ≤19
+    if (!edu || total === null || total === undefined) return { label: '—', badge: 'badge-secondary' };
+    if (edu === 'more_than_hs') {
+      if (total >= 27) return { label: 'Normal range (HS+)', badge: 'badge-success' };
+      if (total >= 21) return { label: 'Mild neurocognitive disorder (HS+)', badge: 'badge-warning' };
+      return { label: 'Dementia range (HS+)', badge: 'badge-danger' };
+    } else {
+      if (total >= 25) return { label: 'Normal range (HS/less)', badge: 'badge-success' };
+      if (total >= 20) return { label: 'Mild neurocognitive disorder (HS/less)', badge: 'badge-warning' };
+      return { label: 'Dementia range (HS/less)', badge: 'badge-danger' };
+    }
+  }
+
+  function updateInterpretation() {
+    const total = clampToNumber(totalEl.value);
+    const edu = eduEl.value;
+    liveTotal.textContent = total || 0;
+
+    const { label, badge } = interpretSLUMS(total, edu);
+    interpEl.value = label;
+    liveInterp.className = 'ml-3 badge ' + badge;
+    liveInterp.textContent = label;
+  }
+
+  totalEl.addEventListener('input', updateInterpretation);
+  eduEl.addEventListener('change', updateInterpretation);
+
+  // Sum optional itemized fields into total
+  document.getElementById('sumBtn').addEventListener('click', () => {
+    const segs = Array.from(document.querySelectorAll('.seg'));
+    const sum = segs.reduce((acc, el) => acc + clampToNumber(el.value), 0);
+    totalEl.value = Math.max(0, Math.min(30, sum)); // clamp to 0–30
+    updateInterpretation();
+  });
+
+  // Clear all fields
+  document.getElementById('clearBtn').addEventListener('click', () => {
+    document.querySelector('form').reset();
+    // Manually reset live UI
+    liveTotal.textContent = '0';
+    liveInterp.textContent = '—';
+    liveInterp.className = 'ml-3 badge badge-secondary';
+    interpEl.value = '';
+  });
+
+  // Initial paint
+  updateInterpretation();
+</script>
+
+<!-- If you have local JS, include it; otherwise the page still works without it -->
 <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
