--- a/.render_temp_moca.html
+++ b/.render_temp_moca.html
@@ -293,4 +293,4 @@
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js"></script>
 </body>
-</html>
+</html><script>window.scrollTo(0, 0); setTimeout(function() { window.scrollTo(0, 0); },200)</script>
